--- a/图片上传/uploadHead.html
+++ b/图片上传/uploadHead.html
@@ -46,3 +46,5 @@
     <script type="text/javascript" src="./js/uploadHead.js"></script>
   </body>
 </html>
+ <!--   参考资源 -->
+ <!--  https://segmentfault.com/a/1190000010034177#articleHeader2    https://download.csdn.net/download/qq727013465/9613086 -->
